pytigergraph/1.7/core-functions/utils.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils)[Next](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.7/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.7/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.7/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.7/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.7/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.7/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.7/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.7/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.7/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.7/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.7/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.7/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.7/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.7/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.7/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.7/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.7/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.7/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.7/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.7/release-notes/legacy-tg-versions)


pyTigerGraph 1.7
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
  * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/)
  * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.7/modules/core-functions/pages/utils.adoc)
### Contents
  * [echo()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_echo)
  * [getLicenseInfo()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getlicenseinfo)
  * [ping()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_ping)
  * [getSystemMetrics()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getsystemmetrics)
  * [getQueryPerformance()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getqueryperformance)
  * [getServiceStatus()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getservicestatus)
  * [rebuildGraph()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_rebuildgraph)


# Utility Functions
### Contents
  * [echo()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_echo)
  * [getLicenseInfo()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getlicenseinfo)
  * [ping()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_ping)
  * [getSystemMetrics()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getsystemmetrics)
  * [getQueryPerformance()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getqueryperformance)
  * [getServiceStatus()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getservicestatus)
  * [rebuildGraph()](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_rebuildgraph)


Utility functions for pyTigerGraph. All functions in this module are called as methods on a [`TigerGraphConnection` object](https://docs.tigergraph.com/pytigergraph/current/core-functions/base).
## [](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_echo)echo()
`echo(usePost: bool = False) → str`
Pings the database.
#### Parameter:
  * `usePost`: Use POST instead of GET


#### Returns:
"Hello GSQL" if everything was OK.
#### Endpoint:
  * `GET /echo`
  * `POST /echo` See [Echo](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints#_echo)


## [](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getlicenseinfo)getLicenseInfo()
`getLicenseInfo() → dict`
Returns the expiration date and remaining days of the license.
#### Returns:
Returns license details. For an evaluation/trial deployment, returns an information message and -1 remaining days.
## [](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_ping)ping()
`ping() → dict`
Public health check endpoint.
#### Returns:
Returns a JSON object with a key of "message" and a value of "pong"
## [](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getsystemmetrics)getSystemMetrics()
`getSystemMetrics(from_ts: int = None, to_ts: int = None, latest: int = None, what: str = None, who: str = None, where: str = None)`
Monitor system usage metrics.
#### Parameters:
  * `from_ts (int, optional)`: The epoch timestamp that indicates the start of the time filter.
  * `to_ts (int, optional)`: The epoch timestamp that indicates the end of the time filter.
  * `latest (int, optional)`: Number of datapoints to return. If provided, `from_ts` and `to_ts` will be ignored.
  * `what (str, optional)`: Name of the metric to filter for. Possible choices are:
    * "cpu": Percentage of CPU usage by component
    * "mem": Memory usage in megabytes by component
    * "diskspace": Disk usage in megabytes by directory
    * "network": Network traffic in bytes since the service started
    * "qps": Number of requests per second by endpoint
    * "servicestate": The state of the service, either online 1 or offline 0 (Only avaliable in version <4.1)
    * "connection": Number of open TCP connections (Only avaliable in version <4.1)
  * `who (str, optional)`: Name of the component that reported the datapoint. (Only avaliable in version <4.1)
  * `where (str, optional)`: Name of the node that reported the datapoint.


#### Returns:
JSON object of datapoints collected. Note: Output format differs between 3.x and 4.x versions of TigerGraph.
#### Endpoints:
  * `GET /ts3/api/datapoints` (In TigerGraph versions 3.x) See xref:tigergraph-server:API:built-in-endpoints.adoc#_monitor_system_metrics_ts3_deprecated
  * `POST /informant/metrics/get/{metrics_category}` (In TigerGraph versions 4.x) See xref:tigergraph-server:API:built-in-endpoints.adoc#_monitor_system_metrics_by_category


## [](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getqueryperformance)getQueryPerformance()
`getQueryPerformance(seconds: int = 10)`
Returns real-time query performance statistics over the given time period, as specified by the seconds parameter.
#### Parameter:
  * `seconds (int, optional)`: Seconds are measured up to 60, so the seconds parameter must be a positive integer less than or equal to 60. Defaults to 10.


## [](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_getservicestatus)getServiceStatus()
`getServiceStatus(request_body: dict)`
Returns the status of the TigerGraph services specified in the request. Supported on databases versions 3.4 and above.
#### Parameter:
  * `request_body (dict)`: Must be formatted as specified here: <https://docs.tigergraph.com/tigergraph-server/current/api/built-in-endpoints#_show_service_status>


## [](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils#_rebuildgraph)rebuildGraph()
`rebuildGraph(threadnum: int = None, vertextype: str = "", segid: str = "", path: str = "", force: bool = False)`
Rebuilds the graph engine immediately. See [this](https://docs.tigergraph.com/tigergraph-server/current/api/built-in-endpoints#_rebuild_graph_engine) for more details. for more information.
#### Parameters:
threadnum (int, optional): Number of threads to execute the rebuild. * `vertextype (str, optional)`: Vertex type to perform the rebuild for. Will perform for all vertex types if not specified. * `segid (str, optional)`: Segment ID of the segments to rebuild. If not provided, all segments will be rebuilt. In general, it is recommneded not to provide this parameter and rebuild all segments. * `path (str, optional)`: Path to save the summary of the rebuild to. If not provided, the default path is "/tmp/rebuildnow". * `force (bool, optional)`: Boolean value that indicates whether to perform rebuilds for segments for which there are no records of new data. Normally, a rebuild would skip such segments, but if force is set true, the segments will not be skipped.
#### Returns:
JSON response with message containing the path to the summary file.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


